--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -30,6 +30,7 @@ library
       Prob4
       Prob5
       Prob6
+      Prob7
   other-modules:
       Paths_advent_of_code2022
   hs-source-dirs:
@@ -38,6 +39,7 @@ library
   build-depends:
       base >=4.7 && <5
     , megaparsec
+    , mtl
   default-language: Haskell2010
 
 executable advent-of-code2022-exe
@@ -51,6 +53,7 @@ executable advent-of-code2022-exe
       advent-of-code2022
     , base >=4.7 && <5
     , megaparsec
+    , mtl
   default-language: Haskell2010
 
 test-suite spec
@@ -71,5 +74,6 @@ test-suite spec
     , hspec ==2.*
     , hspec-megaparsec
     , megaparsec
+    , mtl
   default-language: Haskell2010
   build-tool-depends: hspec-discover:hspec-discover == 2.*
