--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -32,6 +32,7 @@ library
       Prob6
       Prob7
       Prob8
+      Prob9
   other-modules:
       Paths_advent_of_code2022
   hs-source-dirs:
@@ -39,6 +40,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
     , megaparsec
     , mtl
   default-language: Haskell2010
@@ -53,6 +55,7 @@ executable advent-of-code2022-exe
   build-depends:
       advent-of-code2022
     , base >=4.7 && <5
+    , containers
     , megaparsec
     , mtl
   default-language: Haskell2010
@@ -72,6 +75,7 @@ test-suite spec
       QuickCheck
     , advent-of-code2022
     , base >=4.7 && <5
+    , containers
     , hspec ==2.*
     , hspec-megaparsec
     , megaparsec
