--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -44,6 +44,7 @@ library
     , containers
     , megaparsec
     , mtl
+    , split
   default-language: Haskell2010
 
 executable advent-of-code2022-exe
@@ -59,6 +60,7 @@ executable advent-of-code2022-exe
     , containers
     , megaparsec
     , mtl
+    , split
   default-language: Haskell2010
 
 test-suite spec
@@ -81,5 +83,6 @@ test-suite spec
     , hspec-megaparsec
     , megaparsec
     , mtl
+    , split
   default-language: Haskell2010
   build-tool-depends: hspec-discover:hspec-discover == 2.*
