--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -27,6 +27,7 @@ library
       Prob1
       Prob10
       Prob11
+      Prob12
       Prob2
       Prob3
       Prob4
@@ -43,6 +44,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , matrix
     , megaparsec
     , mtl
     , split
@@ -59,6 +61,7 @@ executable advent-of-code2022-exe
       advent-of-code2022
     , base >=4.7 && <5
     , containers
+    , matrix
     , megaparsec
     , mtl
     , split
@@ -82,6 +85,7 @@ test-suite spec
     , containers
     , hspec ==2.*
     , hspec-megaparsec
+    , matrix
     , megaparsec
     , mtl
     , split
