--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -34,6 +34,7 @@ library
       Prob16
       Prob16.Minpath
       Prob17
+      Prob18
       Prob2
       Prob3
       Prob4
@@ -50,6 +51,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , list-t
     , matrix
     , megaparsec
     , mtl
@@ -67,6 +69,7 @@ executable advent-of-code2022-exe
       advent-of-code2022
     , base >=4.7 && <5
     , containers
+    , list-t
     , matrix
     , megaparsec
     , mtl
@@ -91,6 +94,7 @@ test-suite spec
     , containers
     , hspec ==2.*
     , hspec-megaparsec
+    , list-t
     , matrix
     , megaparsec
     , mtl
